# clinicahaskell

./: Application.hs  Foundation.hs  Main.hs  README.md  client_session_key.aes  clinica.cabal  routes
Handlers/: Agendamento.hs  Funcionario.hs  Login.hs  Medico.hs  Paciente.hs
messages/: pt-br.msg
static/: style.css
static/css/: style.css
templates/: form.hamlet  lista.hamlet  listaf.hamlet  listaf.lucius  listam.hamlet
