name:              clinica
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         clinica
    main-is:            Main.hs

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-core
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.3
                 , persistent-postgresql             >= 2.1.1      && < 2.3
                 , monad-logger
                 , aeson
                 , shakespeare
                 , time
    
    other-modules: Foundation,
                   Application,
                   Handlers.Agendamento,
                   Handlers.Medico,
                   Handlers.Paciente,
                   Handlers.Login
                   Handlers.Funcionario